# TheFightingPit

api/: .env-base  Cargo.toml
api/migrations/2024-09-05-095032_create-user-table/: up.sql
api/migrations/2024-09-11-120442_add-tournaments/: down.sql  up.sql
api/migrations/2024-09-12-131343_add-participants/: down.sql  up.sql
api/migrations/2024-09-12-131758_add-referees/: down.sql  up.sql
api/migrations/2024-09-19-090705_add_bracket_matches/: down.sql  up.sql
api/src/: main.rs  models.rs  schema.rs
api/src/guards/: mod.rs  validated_user.rs
api/src/routes/: account.rs  mod.rs  tournament.rs
api/src/utils/: bracket_generator.rs  hashing.rs  jwt.rs  mod.rs
frontend/: pubspec.yaml
frontend/assets/: .env
frontend/lib/: formatting.dart  main.dart  tokenmanager.dart
frontend/lib/models/: bracket.dart  participant.dart  referee.dart  tournament.dart  tournament_permissions.dart  user.dart
frontend/lib/pages/: homescreen.dart  login.dart  login_signin.dart  newtournament.dart  profile.dart  ref_match.dart  signup.dart  tournament.dart  tournament_settings.dart  tournaments.dart  tournamentsignup.dart
frontend/lib/widgets/: beam_back_button.dart  beam_home_button.dart  brackets_display.dart  custom_app_bar.dart  menu_area.dart  menu_button.dart  player_list.dart  title_text.dart  tournament_list_element.dart
