[package]
name = "tfp-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"]}
diesel = { version = "2.2.0", features = ["mysql"] }
dotenvy = "0.15"
chrono = "0.4.38"
serde = { version = "1.0.209", features = ["derive"] }
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
rocket_cors = "0.6.0"
