[package]
name = "tfp-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"]}
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
serde_json = "1.0.87"
diesel = { version = "2.0.2", features = ["mysql", "chrono", "serde_json"] }
dotenvy = "0.15"
chrono = { version = "0.4.33", features = ["serde"] }
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
rocket_cors = "0.6.0"
regex = "1.10.6"
